samples/_failures_safe/1761128004_f326dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43fdf8d1.c: In function ‘main’:
./samples/SAFE/__tmp_43fdf8d1.c:152:17: error: expected expression at end of input
  152 |                 } else if (status == -
      |                 ^
./samples/SAFE/__tmp_43fdf8d1.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43fdf8d1.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43fdf8d1.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43fdf8d1.c:152:17: error: expected declaration or statement at end of input
